styles: fixed color contrast issue
Adjusted the filter brightness and added white the navbar background to blend hamburger icon with background.

--- a/src/styles/components/Navbar.module.scss
+++ b/src/styles/components/Navbar.module.scss
@@ -8,7 +8,7 @@
   left: 0;
   width: 100%;
   z-index: 998;
-  background-color: transparent;
+  background-color: white;
 }
 .menu-wrapper {
   .menu-icon {
